# dotFiles

./: .gitattributes  .gitignore  .pylintrc  .vimrc  README.md  apply.py  apply_configs.jsonnet  apply_configs_core.jsonnet  bashrc  bootstrap_chromebook.sh  bootstrap_iterm2.sh  bootstrap_kubuntu.sh  bootstrap_osx.sh  bootstrap_wsl.sh  dotFiles.code-workspace  ext_vars.libsonnet  gitconfig  mypy.ini  profiles.json  pull_shell_local.sh  push_shell.py  push_shell.sh  push_shell_local.sh  pyproject.toml  requirements.in  requirements.txt  setup_env.ps1  setup_env.sh  verify_fonts.py  vimrc  work_env.py  workday.py  zshrc
Scripts/: install.sh  install_sublime_windows_plugins.bat
aws/: aws_clients_ex.py  aws_ec2_workstation.py  aws_nuke.py
bash/: bash_profile.sh  bashrc.sh  colors.sh  inputrc.sh  profile.sh
ghostty/: README.md  ghostty_config.jsonnet  ghostty_config.properties
git/: README.md  gitconfig  gitconfig.jsonnet  gitconfig_core.jsonnet
gnome/: dconf_settings.jsonnet
iterm2/: README.md  Work Away from Home.json  Zsh Away from Home.json  Zsh the Hard Way.json  apply_color_scheme.py  color_schemes.jsonnet  com.googlecode.iterm2.plist  com.googlecode.iterm2.plist.jsonnet  generate_profiles.py  iterm2_color_funcs.jsonnet  iterm2_funcs.sh  iterm_core.libsonnet  iterm_profiles.jsonnet  profile_substitutions.json  profile_template.json
keyboard/: keychron_q0_plus.layout.json  keychron_q10_ansi_knob.layout.json
konsole/: CampbellScheme.jsonnet  ColorConfigs.jsonnet  GCloudProfile.jsonnet  GCloudProfile.profile  GCloudScheme.colorscheme  GCloudScheme.jsonnet  (+14 more)
(+72 files in other folders)
