[project]
name = "dotfiles"
version = "0.0.0"
description = "Personal dotfiles helpers and tooling."
authors = [{ name = "Joe" }]
requires-python = ">=3.10"
dependencies = [
    "jsmin==3.0.1",
    "isort>=5.13,<6",
    "black>=23.12,<24",
    "mypy>=1.18,<2",
    "boto3>=1.28,<2",
    "boto3-stubs[ec2,eks,elbv2,elb,ecr,logs,iam,kms,sts,s3]>=1.28,<2",
]
